welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var nbPas=0
while (estSurOrange()==false){
  do {
    
    var nbBiscuit=0
    for (nbPas <- 1 to 6) {
    avance()
      if (estSurBiscuit()==true){
      nbBiscuit=nbBiscuit+1
    }}
    if (nbBiscuit<3){
    droite()
    }
    if (nbBiscuit>=3){
    gauche()
  }
} while (crossing()==true)
}